DZ2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
#  - host: minikube.uven.ru
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: web-headless
             port: 
                number: 80
