DZ2/ingress_canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
#  - host: kubesphere.io
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-headless
            port: 
              number: 80
